--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,9 @@ dmypy.json
 
 # Test images
 tests/obj_recognition/img
+
+#Training Data
+chesster/Vision-Based-Control/Trainingsdaten
+chesster/Vision-Based-Control/logs
+chesster/Vision-Based-Control/logs_Alte Datene
+chesster/Vision-Based-Control/logs_Altes_NN
