added more environment variables

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 STOCKFISH_PATH=/usr/games/stockfish
 PYTHONPATH=${PYTHONPATH}:${PWD}
 ROBOT_ADDRESS=169.254.34.80
+CALIBRATION_DATA_PATH=resources/ChessboardCalibration/Cali_0402-old.pkl
+NEURAL_NETWORK_PATH=resources/
+SCALER_PATH=resources/DataScaler/
