--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-STOCKFISH_PATH=/usr/games/stockfish
+STOCKFISH_PATH=\usr\games\stockfish
 PYTHONPATH=${PYTHONPATH}:${PWD}
 ROBOT_ADDRESS=169.254.34.80
-CALIBRATION_DATA_PATH=resources/ChessboardCalibration/Cali_0402-old.pkl
-NEURAL_NETWORK_PATH=resources/
-SCALER_PATH=resources/DataScaler/
+CALIBRATION_DATA_PATH=chesster\resources\CalibrationData\chessboard_data.pkl
+NEURAL_NETWORK_PATH=chesster\resources\
+SCALER_PATH=chesster\resources\DataScaler\
