Object recognition improvements

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-STOCKFISH_PATH=\usr\games\stockfish
+STOCKFISH_PATH=/usr/games/stockfish
 PYTHONPATH=${PYTHONPATH}:${PWD}
 ROBOT_ADDRESS=169.254.34.80
 CALIBRATION_DATA_PATH=chesster\resources\CalibrationData\chessboard_data.pkl
