--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 jupyter = "*"
 pyqt5 = "*"
-#pyqt5-tools = "*"
+pyqt5-tools = "*"
 numpy = "*"
 matplotlib = "*"
 pyrealsense2 = "*"
@@ -18,12 +18,11 @@ chess = "*"
 pandas = "*"
 python-dotenv = "*"
 urx = "*"
-torch = "*"
-torchvision = "*"
+#torch = "*"
+#torchvision = "*"
 albumentations = "*"
 tqdm = "*"
 click = "*"
-#opencv-python-headless = "4.5.5.62"
 opencv-python = "*"
 tensorflow = "*"
 keras = "*"
