various additions, mainly small improvements and debug features

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ ROBOT_ADDRESS=169.254.34.80
 CALIBRATION_DATA_PATH=chesster\resources\CalibrationData\chessboard_data.pkl
 NEURAL_NETWORK_PATH=chesster\resources\
 SCALER_PATH=chesster\resources\DataScaler\
+DEBUG_IMAGES_PATH = chesster\debug_images\
