added some paths

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ CALIBRATION_DATA_PATH=chesster\resources\CalibrationData\chessboard_data.pkl
 NEURAL_NETWORK_PATH=chesster\resources\
 SCALER_PATH=chesster\resources\DataScaler\
 DEBUG_IMAGES_PATH = chesster\debug_images\
+TRAINING_DATA_PATH = chesster\vision_based_control\training_data\
+NEURAL_NETWORK_DATA_PATH = chesster\resources\VBC_Data\
+NEURAL_NETWORK_MODEL_IMAGE = chesster\vision_based_control\
