--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,4 @@ chesster/Vision-Based-Control/Trainingsdaten
 chesster/Vision-Based-Control/logs
 chesster/Vision-Based-Control/logs_Alte Datene
 chesster/Vision-Based-Control/logs_Altes_NN
+chesster/vision_based_control/training_data
