added Benchmark Setup

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ DEBUG_IMAGES_PATH = chesster\debug_images\
 TRAINING_DATA_PATH = chesster\vision_based_control\training_data\
 NEURAL_NETWORK_DATA_PATH = chesster\resources\VBC_Data\
 NEURAL_NETWORK_MODEL_IMAGE = chesster\vision_based_control\
+BENCHMARK_DATA_PATH = chesster\vision_based_control\evaluation_data\
